# athena

./: .cursorignore  .gitignore  IMPLEMENTATION_PLAN_FOR_DRF.md  IMPLEMENTATION_PLAN_FOR_LANGCHAIN.md  UML.md  alembic.ini  athena-android-iguidelines.md  firebase-integration.md
Infrastructure/: Dockerfile  docker-compose.debug.yml  docker-compose.yml
aegis/: Dockerfile  asgi.py  manage.py  requirements.txt  utils.py
ai-chat-android/: .gitignore  clean_run.sh  gradle.properties  settings.gradle.kts
athena-DRF/: Dockerfile  manage.py  requirements.txt
athena-android/: run.sh  (+8 more)
athena-server/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
athena-server/ops/postgres/: init.sql
athena-server/src/athena_server/: __main__.py  config.py
athena-server/src/athena_server/agents/: anti_distraction_agent.py  appeals_agent.py  example_rag_agent.py  goals_scheduler_agent.py  registry.py
athena-server/src/athena_server/db/: postgres.py  redis.py
athena-server/src/athena_server/memory/: chat_history.py  ingest_cli.py  vectorstore.py
athena-server/src/athena_server/notifications/: __init__.py
athena-server/src/athena_server/policies/: schedule.py
athena-server/src/athena_server/server/: app.py
athena-server/src/athena_server/tools/: push.py  registry.py
athena-utils/: alembic.ini  pyproject.toml
athena-utils/alembic/: env.py  script.py.mako
athena-utils/alembic/versions/: 0001_initial.py  0002_add_prompts.py  03d9101302f1_migrate_to_sqlalchemy.py  3623834d8322_merge_prompts_and_sqlalchemy.py  7344289ab91f_add_user_id_to_docs_table.py
athena-utils/src/: athena_celery.py  athena_logging.py  athena_settings.py
athena-utils/src/athena_celery/: __init__.py  athena_celery.py
athena-utils/src/athena_models/: __init__.py  chat.py  digital_wellbeing.py  doc.py  prompt.py  store.py  user.py  utils.py
athena-utils/src/athena_settings/: __init__.py  athena_settings.py
athena-utils/src/models/: __init__.py  base.py  chat.py  digital_wellbeing.py  doc.py  store.py  user.py
(+437 files in other folders)
