[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "athena-server"
version = "0.1.0"
description = "Athena server: LangChain/LangGraph/LangServe boilerplate"
authors = [
  { name = "Athena" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
